Bug 446892 - Segmented Gradient in Beta 5 doesn't work when saving the gradient.
Summary: Segmented Gradient in Beta 5 doesn't work when saving the gradient.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-12 19:01 UTC by RamonMiranda
Modified: 2021-12-13 11:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-14941-0.html (2.32 KB, text/html)
2021-12-13 11:44 UTC, RamonMiranda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description RamonMiranda 2021-12-12 19:01:56 UTC
SUMMARY
Gradient is not saved correctly

STEPS TO REPRODUCE
1. Select the gradient tool
2. Create a new segmented gradient
3. Select red for the first stop and orange for the second, and give it a name.
4. Save the gradient.

OBSERVED RESULT
The gradients shows a basic B/W gradient. Is not saved correctly. 
I try to edit it and if i select a segment, color appears. but if i save the gradient. is again B/W

EXPECTED RESULT
Save the gradient as it is shon in the gradient editor.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 20.04
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Operating System: Kubuntu 20.04
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8
Kernel Version: 5.4.0-91-generic
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-3320M CPU @ 2.60GHz
Memory: 7,5 GiB

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.4.0-91-generic
  Pretty Productname: Ubuntu 20.04.3 LTS
  Product Type: ubuntu
  Product Version: 20.04
  Desktop: KDE
Comment 1 Deif Lou 2021-12-13 11:04:56 UTC
Git commit 563c126c2f79d0129b30cbe1f0d738d70d965ddb by Deif Lou.
Committed on 13/12/2021 at 11:01.
Pushed by deiflou into branch 'master'.

Fix cleaning of old segments in KoSegmentGradient::loadFromDevice

The old segments were not cleaned in KoSegmentGradient::loadFromDevice, so the
gradient became corrupted when the new segments were added.

M  +1    -0    libs/pigment/resources/KoSegmentGradient.cpp

https://invent.kde.org/graphics/krita/commit/563c126c2f79d0129b30cbe1f0d738d70d965ddb
Comment 2 Dmitry Kazakov 2021-12-13 11:09:08 UTC
Git commit 67d59747f551e8b06f0a2556822faac2273b291c by Dmitry Kazakov, on behalf of Deif Lou.
Committed on 13/12/2021 at 11:08.
Pushed by dkazakov into branch 'krita/5.0'.

Fix cleaning of old segments in KoSegmentGradient::loadFromDevice

The old segments were not cleaned in KoSegmentGradient::loadFromDevice, so the
gradient became corrupted when the new segments were added.
(cherry picked from commit 563c126c2f79d0129b30cbe1f0d738d70d965ddb)

M  +1    -0    libs/pigment/resources/KoSegmentGradient.cpp

https://invent.kde.org/graphics/krita/commit/67d59747f551e8b06f0a2556822faac2273b291c
Comment 3 RamonMiranda 2021-12-13 11:44:20 UTC
Created attachment 144508 [details]
attachment-14941-0.html

Wow that is fast, thanks for looking at my bug report ;)

El lun, 13 dic 2021 a las 12:09, Dmitry Kazakov (<bugzilla_noreply@kde.org>)
escribió:

> https://bugs.kde.org/show_bug.cgi?id=446892
>
> Dmitry Kazakov <dimula73@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>       Latest Commit|https://invent.kde.org/grap |
> https://invent.kde.org/grap
>                    |hics/krita/commit/563c126c2
> |hics/krita/commit/67d59747f
>                    |f79d0129b30cbe1f0d738d70d96
> |551e8b06f0a2556822faac2273b
>                    |5ddb                        |291c
>
> --- Comment #2 from Dmitry Kazakov <dimula73@gmail.com> ---
> Git commit 67d59747f551e8b06f0a2556822faac2273b291c by Dmitry Kazakov, on
> behalf of Deif Lou.
> Committed on 13/12/2021 at 11:08.
> Pushed by dkazakov into branch 'krita/5.0'.
>
> Fix cleaning of old segments in KoSegmentGradient::loadFromDevice
>
> The old segments were not cleaned in KoSegmentGradient::loadFromDevice, so
> the
> gradient became corrupted when the new segments were added.
> (cherry picked from commit 563c126c2f79d0129b30cbe1f0d738d70d965ddb)
>
> M  +1    -0    libs/pigment/resources/KoSegmentGradient.cpp
>
>
> https://invent.kde.org/graphics/krita/commit/67d59747f551e8b06f0a2556822faac2273b291c
>
> --
> You are receiving this mail because:
> You reported the bug.