Fix cleaning of old segments in KoSegmentGradient::loadFromDevice

The old segments were not cleaned in KoSegmentGradient::loadFromDevice, so the
gradient became corrupted when the new segments were added.

BUG:446892
(cherry picked from commit 563c126c2f79d0129b30cbe1f0d738d70d965ddb)